# detchannelmaps

./: CMakeLists.txt
.github/workflows/: dunedaq-develop-cpp-ci.yml
cmake/: detchannelmapsConfig.cmake.in
config/50L/: 50LChannelMap_v1.txt
config/iceberg/: iceberg_wibeth_chanmap_v1.txt
config/pd2hd/: PD2HDChannelMap_v1.txt  PD2HDChannelMap_v2.txt  PD2HDChannelMap_v3.txt  PD2HDChannelMap_v4.txt  PD2HDChannelMap_v5.txt  PD2HDChannelMap_v6.txt  PD2HDHardwareMap.txt  PD2HDHardwareMap_v1.txt
config/pd2vd/: PD2VDBottomTPCChannelMap_v1.txt
config/vdcoldbox/: vdcbce_chanmap_v1.txt  vdcbce_chanmap_v1_dcchan0.txt  vdcbce_chanmap_v1_dcchan0_verticalslice.txt  vdcbce_chanmap_v1_dcchan3200.txt  vdcbce_chanmap_v1_dcchan3200_verticalslice.txt  vdcbce_chanmap_v1_dcchan3456.txt  vdcbce_chanmap_v1_dcchan3456_verticalslice.txt  vdcbce_chanmap_v1_verticalslice.txt  vdcbce_chanmap_v2_dcchan3200.txt  vdcbce_chanmap_v3.txt  vdcbce_chanmap_v4.txt  vdcbe_hardwaremap.txt
docs/: DummiesGuideToWritingHWMapFiles.md  README.md
include/detchannelmaps/: ChannelMap.hpp  HardwareMapService.hpp  PdspChannelMapService.hpp  TPCChannelMap.hpp
plugins/: FiftyLChannelMap.cpp  HDColdboxChannelMap.cpp  ICEBERGChannelMap.cpp  PD2HDChannelMap.cpp  PD2VDBottomTPCChannelMap.cpp  ProtoDUNESP1ChannelMap.cpp  VDColdboxChannelMap.cpp
pybindsrc/: channelmap.cpp  hardwaremapservice.cpp  module.cpp
python/detchannelmaps/: __init__.py
schema/detchannelmaps/: hardwaremapservice.jsonnet
src/: HardwareMapService.cpp  PD2HDChannelMapSP.cpp  PD2HDChannelMapSP.h  PD2HDChannelMapService.cpp  PD2HDChannelMapService.hpp  PdspChannelMapService.cpp  VDColdboxChannelMapService.cpp  VDColdboxChannelMapService.hpp
test/: TestHardwareMap.txt
test/apps/: dummy_map_test.cxx
test/config/: TestHardwareMap.txt
test/plugins/: DummyChannelMap.cpp
unittest/: HardwareMapService_test.cxx  TPCChannelMap_test.cxx
